<resources>
    <string name="app_name">RateApp</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Name Surname</string>
    <string name="nav_header_subtitle" translatable="false">email</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="nav_drawer_profile">Profile</string>
    <string name="nav_drawer_rating">Rating</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_title">Communicate</string>
    <string name="nav_drawer_share">Share</string>

    <string name="rating_fragment_label">Rating</string>
    <string name="profile_fragment_label">Profile</string>
    <string name="settings_fragment_label">Settings</string>

    <string name="post_activity_label">New Post</string>


    <string name="email_hint" translatable="false">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up">Sign up</string>

    <string name="sign_up_key">Enter your key</string>
    <string name="sign_up_email" translatable="false">Enter your email</string>
    <string name="sign_up_password">Enter your password</string>
    <string name="sign_up_passwordConfirm">Confirm your password</string>


    <string name="main_new_post">New post</string>
    <string name="main_delete_post" translatable="false">Delete post</string>
    <string name="main_item_card_comma" translatable="false">, </string>


    <string name="new_post_your_comment">Your comment:</string>
    <string name="new_post_check_item" translatable="false">Item1</string>
    <string name="new_post_back_item" translatable="false">Item2</string>

    <string name="rate_list_item_rating">Rating:</string>


    <string-array name="typesOfEvent">
        <item>Choose type of event</item>
        <item>Competition</item>
        <item>Mark</item>
    </string-array>

    <string-array name="levelOfEvent">
        <item>Choose level of event</item>
        <item>School</item>
        <item>District</item>
        <item>Region</item>
        <item>Republic</item>
    </string-array>

    <string-array name="markOfEvent">
        <item>Choose mark</item>
        <item>10</item>
        <item>9</item>
        <item>8</item>
        <item>7</item>
        <item>6</item>
    </string-array>

    <string name="settings_fragment_btn_account_settings">Account settings</string>
    <string name="settings_fragment_btn_sign_out">Sign out</string>


    <string-array name="rating_filter">
        <item>School</item>
        <item>District</item>
        <item>Region</item>
        <item>Republic</item>
    </string-array>

    <string-array name="placeOfEvent">
        <item>Choose place</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

</resources>
