<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/StartActivity"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"

                android:hint="@string/sign_up_key"
                android:inputType="textPersonName"

                style="@style/EditTextPrimary"
                />

            <TextView
                style="@style/EditTextPlain"
                />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:hint="@string/sign_up_email"
                android:inputType="textEmailAddress"

                style="@style/EditTextPrimary"
                />

            <TextView
                style="@style/EditTextPlain"
                />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:hint="@string/sign_up_password"
                android:inputType="textPassword"

                style="@style/EditTextPrimary"
                />

            <TextView
                style="@style/EditTextPlain"
                />


            <EditText
                android:id="@+id/edtPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:hint="@string/sign_up_passwordConfirm"
                android:inputType="textPassword"

                style="@style/EditTextPrimary"
                />

            <TextView
                style="@style/EditTextPlain"
                />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="40dp"
                android:layout_marginLeft="45sp"
                android:layout_marginRight="45sp"

                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:background="@color/colorPrimaryDark"

                android:onClick="startMainActivity"
                />



        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>