<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/StartActivity"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200sp"

                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"

                style="@style/EditTextPrimary"
                />

            <TextView
                style="@style/EditTextPlain"
                />


            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"

                android:hint="@string/password_hint"
                android:inputType="textPassword"

                style="@style/EditTextPrimary"/>

            <TextView
                style="@style/EditTextPlain"
                />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="40sp"
                android:layout_marginLeft="45sp"
                android:layout_marginRight="45sp"

                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:background="@color/colorPrimaryDark"
                />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:layout_marginLeft="45sp"
                android:layout_marginRight="45sp"

                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:background="@color/colorPrimaryDark"


                />


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>